aws/ebs-csi-driver.tf
# Fetch the OIDC thumbprint using TLS certificate
provider "tls" {}

data "tls_certificate" "oidc" {
  url = aws_eks_cluster.my_cluster.identity[0].oidc[0].issuer
  depends_on = [aws_eks_cluster.my_cluster]
}

# Create IAM Role for EBS CSI Driver
resource "aws_iam_role" "ebs_csi_driver" {
  name               = "ebs-csi-driver"
  assume_role_policy = data.aws_iam_policy_document.ebs_csi_driver_assume_role.json
}

# Assume Role Policy Document for EBS CSI Driver
data "aws_iam_policy_document" "ebs_csi_driver_assume_role" {
  statement {
    effect = "Allow"

    principals {
      type        = "Federated"
      identifiers = [aws_iam_openid_connect_provider.eks.arn]
    }

    actions = [
      "sts:AssumeRoleWithWebIdentity",
    ]

    condition {
      test     = "StringEquals"
      variable = "${aws_iam_openid_connect_provider.eks.url}:aud"
      values   = ["sts.amazonaws.com"]
    }

    condition {
      test     = "StringEquals"
      variable = "${aws_iam_openid_connect_provider.eks.url}:sub"
      values   = ["system:serviceaccount:kube-system:ebs-csi-controller-sa"]
    }
  }
  depends_on = [aws_iam_openid_connect_provider.eks]
}

# Create IAM Policy Attachments for EBS CSI Driver Role
resource "aws_iam_role_policy_attachment" "AmazonEBSCSIDriverPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
  role       = aws_iam_role.ebs_csi_driver.name
}

# Create OpenID Connect Provider for EKS
resource "aws_iam_openid_connect_provider" "eks" {
  url             = aws_eks_cluster.my_cluster.identity[0].oidc[0].issuer
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.oidc.certificates[0].sha1_fingerprint]
  depends_on = [aws_eks_cluster.my_cluster]
}

# Create Service Account for EBS CSI Driver
resource "kubernetes_service_account" "ebs_csi_controller_sa" {
  metadata {
    name      = "ebs-csi-controller-sa"
    namespace = "kube-system"
    annotations = {
      "eks.amazonaws.com/role-arn" = "arn:aws:iam::058264559032:role/ebs-csi-driver"
    }
  }

  lifecycle {
    ignore_changes  = all
  }
  depends_on = [aws_iam_role.ebs_csi_driver]
}

# EKS Addon for EBS CSI Driver
resource "aws_eks_addon" "ebs_csi_driver" {
  cluster_name             = aws_eks_cluster.my_cluster.name
  addon_name               = "aws-ebs-csi-driver"
  addon_version            = "v1.32.0-eksbuild.1"
  service_account_role_arn = aws_iam_role.ebs_csi_driver.arn
  depends_on = [aws_eks_cluster.my_cluster, aws_iam_role.ebs_csi_driver]
}

# Output for EBS CSI Driver Role ARN
output "ebs_csi_driver_role_arn" {
  description = "The ARN of the EBS CSI Driver role"
  value       = aws_iam_role.ebs_csi_driver.arn
}
